# TradingBotV4

./: .env.example  .gitignore  Dockerfile  PHASE2_CIERRE_2026-04-30.md  PHASE3_BLOQUE2_2026-05-04.md  PHASE3_BLOQUE3_CHAOS_2026-05-04.md  PHASE3_BLOQUE4_2026-05-08.md  PHASE3_INICIO_2026-05-03.md  PHASE4_BLOQUE10_2026-05-12.md  PHASE4_BLOQUE11_2026-05-18.md  PHASE4_BLOQUE1_2026-05-08.md  PHASE4_BLOQUE1_ANALISIS_2026-05-08.md  PHASE4_BLOQUE2_2026-05-08.md  PHASE4_BLOQUE3_2026-05-08.md  PHASE4_BLOQUE4_2026-05-08.md  PHASE4_BLOQUE5_2026-05-08.md  PHASE4_BLOQUE6_2026-05-11.md  PHASE4_BLOQUE7_2026-05-11.md  PHASE4_BLOQUE8_2026-05-12.md  PHASE4_BLOQUE9_2026-05-12.md  SESSION_HANDOFF_V4_2026-04-29.md  V4_Backlog_Tecnico.docx  V4_Backlog_Tecnico.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  ~$_Backlog_Tecnico.docx
.github/workflows/: phase4-shadow-gate.yml
migrations/: V001__initial_schema.sql  V002__ticks_and_equity_snapshots.sql  V003__grid_levels_opened_at.sql  V004__bot_restarts.sql  V005__exchange_strategies.sql  V006__strategy_defer_columns.sql  V007__session_paper_reserve.sql  V008__strategy_capital_columns.sql  V009__symbol_overrides.sql  V010__users_and_otp.sql  V011__strategy_audit.sql  V012__exchange_credentials.sql  V013__session_strategy_snapshot.sql  V014__worker_process_log.sql  V015__strategy_runtime_and_regime_params.sql  V016__multi_tenant_saas_foundation.sql
replay/fixtures/: solusd_shadow_baseline_v1_20260508.jsonl
scripts/: generate_encryption_key.py  phase3_chaos_smoke.ps1  phase4_bybit_egress_diagnostic.ps1  phase4_canary_smoke.ps1  phase4_seed_shadow_strategy.py  phase4_shadow_diff_replay.py  rotate_encryption_key.py  test_credentials_endpoint.sh  test_encryption_flow.py  worker_guardian.ps1
src/api/: app.py
src/auth_kit/: __init__.py  config.py  i18n.py  (+2 more)
tests/: test_grid_engine.py
worker-rust/: Cargo.toml  README.md
worker-rust/src/: main.rs  runtime.rs
worker-rust/src/config_source/: mod.rs
worker-rust/src/control_plane/: mod.rs
worker-rust/src/kernel/: engine.rs  mod.rs  types.rs
worker-rust/src/providers/: bybit_live.rs  bybit_market_data.rs  bybit_simulator.rs  market_data.rs  mod.rs  postgres_tail_market_data.rs
worker-rust/src/publisher/: mod.rs
(+121 files in other folders)
