[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingbotv3"
version = "0.1.0"
description = "Neutral grid market-making bot for Coinbase Advanced Trade"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "asyncpg>=0.29,<1.0",
  "redis>=5.0,<6.0",
  "aiohttp>=3.10,<4.0",
  "httpx>=0.27,<1.0",
  "PyJWT[crypto]>=2.9,<3.0",
  "structlog>=24.4,<25.0",
  "tzdata>=2024.1",
  "python-dotenv>=1.0,<2.0",
  "orjson>=3.10,<4.0",
  "bcrypt>=4.2,<5.0",
  "python-multipart>=0.0.9",
  "jinja2>=3.1,<4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["src/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
